fix(style): exclude dark-mode-only CSS variables from clients that want light-mode-only
Clients can choose to import `color-palette-extended-light-mode-only.css`
if their apps do not fully support dark mode. Therefore, we should make
sure that they do not receive style rules that can mess up their UI.
For example, because if their OS is in dark mode, but not their app,
their shadows could get rendered too dark previously. Clients who import
`color-palette-extended.css` will get all the dark-mode-only variables too.

--- a/src/global/core-styles.scss
+++ b/src/global/core-styles.scss
@@ -27,6 +27,15 @@
     --lime-elevated-surface-background-color: rgb(var(--contrast-100));
 }
 
-@include mixins.in(dark-mode) {
-    --lime-elevated-surface-background-color: rgb(var(--contrast-200));
-}
+// ⚠️ This section below is commented out.
+// It's contents are moved to src/style/color-palette-extended.css
+//
+// Because we don't want to give dark-mode-specific shadows to those
+// clients that only import src/style/color-palette-extended-light-mode-only.css
+// Because if their OS is in dark mode, not their app,
+// The shadows will get rendered too dark, due to `@media (prefers-color-scheme: dark)`
+// rule from the mixin. The day we generate `.css` files from these `.scss` files,
+// we can do it differently.
+// @include mixins.in(dark-mode) {
+//     --lime-elevated-surface-background-color: rgb(var(--contrast-200));
+// }
